Mise en forme bienvenue FOYERS

--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -178,7 +178,7 @@ width: 90%;
 .nav-tabs li{
 		background-color: @bg; 
 		font-family: 'trend_sansone'; border: 1px solid white; border-bottom:none;
-		max-width: 33.33%;
+		/*max-width: 33.33%;*/
 		a{background-color: transparent !important; border: 0 !important; font-size: 14px; text-align: center; color: white !important;}
 }
 .nav-tabs>li.active,.nav-tabs>li:hover{
