--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -47,6 +47,8 @@ html,body{font-family: "Lato","Helvetica Neue", Arial, Helvetica, sans-serif; he
 		h1{font-size: 26px;}
 }
 .uppercase{text-transform: uppercase}
+
+
 /*ACCUEIL*/
 img#foyer {
     position: absolute;
@@ -637,6 +639,55 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
 }
 
 @media screen and (max-width:@min_sm) {.panel-group[id^=collapse] .panel-body ul{padding-left: 12px}}
+
+////////////////////////////////////////////////////
+    ///////////CONTENT LIST///////////////////
+///////////////////////////////////////////////////
+.list-item-title{
+  padding:0 12px;
+  color:white;p{color:white}
+  margin-bottom: 0;
+  min-height: 54px;
+  line-height: 54px;
+  position: relative; z-index:2;
+  span{line-height: 1em; display: inline-block; vertical-align: middle}
+}
+.list-item-title.date-lieu{ position: relative; z-index: 2; text-align: center; border: 2px solid; border-top: 0px;}
+.list-item-img{position:relative; width:100%; overflow:hidden; }
+.list-item-img:before{
+  content: "";
+  display: block;
+  padding-top: 50%; 	/* initial ratio of 2:1*/
+}
+.list-item-img.no-img:before{padding-top: 0;}
+.list-item-img>img{
+  position:  absolute;
+  top: -20%;
+  left: 0;
+  bottom: -50%;
+  right: 0;
+  width:100%;
+  padding-right: 0;
+}
+.list-tags{position: absolute; top:-3em; color: white; opacity: 0.9; right: 5px;}
+@media screen and (min-width:@min_sm){
+  .equal-height-cols{
+    display: table; width: 100%;
+    div[class^="col"]{display: table-cell; vertical-align: middle; float: none; height:200px}
+    a{display: inline-block}
+  }
+}
+
+@media screen and (min-width:@min_xs) {/*.list-item-img:before{padding-top:33.333%;}*/.list-item-img>img{top:-25%}}
+@media screen and (min-width:@min_sm) {
+  .list-item-img:before{padding-top:60%;}
+  .list-item-img>img{top:-5%}
+  .list-item-title.date-lieu{margin-top:-16px;}
+  .list-item-img{margin-top: -16px}
+}
+
+.contentList > div{text-align: center}
+.contentList > div > div{text-align: left; float: none; display: inline-block; vertical-align: top}
 
 
 //ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
