--- a/theme/foyers/templates/blocks/contentList.html
+++ b/theme/foyers/templates/blocks/contentList.html
@@ -42,12 +42,12 @@
                     
                         <div class="media-body">
                             <jwplayer video-url="{{content.fields.video.url}}"></jwplayer>
-                            <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
+                            <!--<a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">-->
                                 <h4 class="list-item-title uppercase"><span>
                                         {{content.fields.text}}
                                     </span>
                                 </h4>
-                            </a>
+                             <!--</a>-->
                             <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
                             
                         </div>
