--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -695,6 +695,9 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
     ///////////CONTENUS///////////////////
 ///////////////////////////////////////////////////
 .contentDetail{min-height: 90vh}
+header{
+				h1,h2,h3,h4,h5{font-family:trend_sansone};
+}
 header.content{
   background-repeat: no-repeat;
     background-position: center center;
