Mise en forme Foyers medias

--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -650,6 +650,9 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
   min-height: 54px;
   line-height: 54px;
   position: relative; z-index:2;
+		font-family: trend_sansone;
+		font-size: 0.95em;
+  text-align: center;
   span{line-height: 1em; display: inline-block; vertical-align: middle}
 }
 .list-item-title.date-lieu{ position: relative; z-index: 2; text-align: center; border: 2px solid; border-top: 0px;}
