--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -380,7 +380,7 @@ button{border: 2px solid white; &:hover{background: white; color:@bg}}
 	border: none;
 }
 .navbar.navbar-default.transparent{
-		background-color:transparent; transition: background-color 0.5s;
+		background-color:rgba(0,0,0,0.3); transition: background-color 0.5s;
 		color:white !important;
 		&:hover{background-color: rgba(0,0,0,0.3)}
 		a{color:white !important}
@@ -439,6 +439,12 @@ header.bg-image{
 		header.bg-image{height:500px; line-height: 500px;};
 }
 /*BOC TEXTE*/
+.presentation{
+				margin-top:50px;
+				margin-right:20%;
+				margin-left:20%;
+    text-align: justify;
+}
 .bloc-icone>div p:first-of-type{
 		font-family: FontAwesome;
     font-size: 50px;
@@ -647,8 +653,8 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
   padding:0 12px;
   color:white;p{color:white}
   margin-bottom: 0;
-  min-height: 54px;
-  line-height: 54px;
+  min-height: 30px;
+  line-height: 30px;
   position: relative; z-index:2;
 		font-family: trend_sansone;
 		font-size: 0.95em; 
