--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -444,6 +444,12 @@ header.bg-image{
 				margin-right:20%;
 				margin-left:20%;
     text-align: justify;
+				font-size: 1.1em;
+}
+@media screen and (max-width: 768px) {
+				.presentation p {
+								text-align: justify;
+				}
 }
 .bloc-icone>div p:first-of-type{
 		font-family: FontAwesome;
