--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -694,6 +694,12 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
   width:100%;
   padding-right: 0;
 }
+.list-item-img>img:hover{
+  -moz-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+		transition: transform .3s;
+}
 .list-tags{position: absolute; top:-3em; color: white; opacity: 0.9; right: 5px;}
 @media screen and (min-width:@min_sm){
   .equal-height-cols{
