--- a/theme/foyers/templates/blocks/carrousel_fullWidth.html
+++ b/theme/foyers/templates/blocks/carrousel_fullWidth.html
@@ -43,7 +43,7 @@
 }
 
 .carousel-inner {
-    height: 100vh;
+    height: 80vh;
     background-color: white;
 }
 
@@ -61,7 +61,7 @@
     background-size: cover;
     -o-background-size: cover;
 }
-.dotted:after {
+.dotted2:after {
     background: url('/theme/foyers/img/pattern_dot.png') repeat left top rgba(0,0,0,0.5);
     content: '';
     display: block;
@@ -88,6 +88,7 @@
 @media screen and (max-width:500px){
         .homepage_txt h1{font-size: 30px;}
         .carousel-indicators{display: none;}
+        .carousel-inner {height: 100vh;}
 }
 .link{position:absolute; bottom: 30px;width:100%; text-align: center}
 .link a{
