--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -694,7 +694,7 @@ ng-form .row{margin: 0 15px;margin-bottom:12px; }
   width:100%;
   padding-right: 0;
 }
-.list-item-img>img:hover{
+.list-item-img:hover img{
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
   transform: scale(1.05);
