--- a/theme/foyers/templates/blocks/contentList.html
+++ b/theme/foyers/templates/blocks/contentList.html
@@ -87,12 +87,12 @@
 											  </div>
 											  <div class="modal-body text-left" >
 											  <p><i><b>{{content.fields.summary}}</b></i></p>
-											  <p style="text-align: justify; font-style:italic;">{{content.fields.age}}</p>
+											  <p style="text-align: justify; font-style:italic;">{{content.fields.annee}}</p>
 											  <p style="text-align: justify;">{{content.fields.temoignage}}</p>
 											  
 											  </div>
 											  <div class="modal-footer">
-												<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+												<button type="button" class="btn btn-default" data-dismiss="modal" style="font-family:trend_sansone; color:#41a0c7;">Close</button>
 											  </div>
 											</div>
 										
