--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -461,7 +461,7 @@ header.bg-image{
 								text-align: justify;
 				}
 }
-.bloc-icone>div p:first-of-type{
+.bloc-icone>div p:first-of-type a:first-of-type{
 		font-family: FontAwesome;
     font-size: 50px;
     height: 100px;
@@ -472,6 +472,7 @@ header.bg-image{
     width: 100px;
     margin: 24px auto;
 				&:hover{background: white; color:@bg !important}
+				text-decoration:none;
 }
 .bloc-icone>div{padding:30px;}
 .bloc-icone>div p{
