--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -461,7 +461,19 @@ header.bg-image{
 								text-align: justify;
 				}
 }
-.bloc-icone>div p:first-of-type a:first-of-type{
+.bloc-icone>div p:first-of-type{
+		font-family: FontAwesome;
+    font-size: 50px;
+    height: 100px;
+    text-align: center;
+    border: 3px solid white;
+    vertical-align: middle;
+    line-height: 90px;
+    width: 100px;
+    margin: 24px auto;
+				&:hover{background: white; color:@bg !important}
+}
+.bloc-icone>div a{
 		font-family: FontAwesome;
     font-size: 50px;
     height: 100px;
