--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -473,18 +473,11 @@ header.bg-image{
     margin: 24px auto;
 				&:hover{background: white; color:@bg !important}
 }
-.bloc-icone>div a{
-		font-family: FontAwesome;
-    font-size: 50px;
-    height: 100px;
-    text-align: center;
-    border: 3px solid white;
-    vertical-align: middle;
-    line-height: 90px;
-    width: 100px;
-    margin: 24px auto;
+.bloc-icone>div p a{
 				&:hover{background: white; color:@bg !important}
 				text-decoration:none;
+				height: 100px;
+				width: 100px;
 }
 .bloc-icone>div{padding:30px;}
 .bloc-icone>div p{
