--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -488,6 +488,9 @@ header.bg-image{
 .bloc-icone>div p{
 		text-align: center;
 }
+.bloc-icone>div a{
+		text-align: center;
+}
 .bloc-icone>div div.line-center {
 		border-color: #dfdfdf;
 		clear: both;
