--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -482,7 +482,7 @@ header.bg-image{
     line-height: 90px;
     width: 100px;
     margin: 24px auto;
-				&:hover{background: white; color:@bg !important}
+				&:hover{border: 3px solid white;}
 }
 .bloc-icone>div{padding:30px;}
 .bloc-icone>div p{
