--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -483,9 +483,7 @@ header.bg-image{
     width: 100px;
     margin: 24px auto;
 				color:white;
-				&:hover{-moz-transform: scale(1.05);
-																-webkit-transform: scale(1.05);
-																transform: scale(1.05);}
+				&:hover{font-weight: bold;}
 }
 .bloc-icone>div{padding:30px;}
 .bloc-icone>div p{
