--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -466,12 +466,12 @@ header.bg-image{
     font-size: 50px;
     height: 100px;
     text-align: center;
-    border: 3px solid white;
+    /*border: 3px solid white;*/
     vertical-align: middle;
     line-height: 90px;
     width: 100px;
     margin: 24px auto;
-				&:hover{background: white; color:@bg !important}
+				/*&:hover{background: white; color:@bg !important}*/
 }
 .bloc-icone>div a:first-of-type{
 		font-family: FontAwesome;
@@ -482,6 +482,7 @@ header.bg-image{
     line-height: 90px;
     width: 100px;
     margin: 24px auto;
+				border: 3px solid white;
 				color:white;
 				&:hover{font-weight: bold;}
 }
