--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -484,7 +484,8 @@ header.bg-image{
     margin: 24px auto;
 				border: 3px solid white;
 				color:white;
-				&:hover{font-weight: bold;}
+				display:block;
+				&:hover{background: white; color:@bg !important}
 }
 .bloc-icone>div{padding:30px;}
 .bloc-icone>div p{
