--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -788,7 +788,7 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
   .socials .addthis_counter {.uppercase; width: auto; margin-right: 3px;
   }
   .addthis_toolbox a:hover{text-decoration: none} 
-
+.txt-white{color:white !important}
 //ng-form .row{max-height: 0; transition: max-height 0.8s ease-out; display: block; overflow: hidden; margin: 0 15px; padding: 0; border: 0}
 
 
