--- a/theme/foyers/templates/blocks/contentDetail/album.html
+++ b/theme/foyers/templates/blocks/contentDetail/album.html
@@ -124,7 +124,7 @@
 .masonry-brick:not(.loaded) .img-description{display: none}
 
 </style>
-<div class="container-fluid" ng-if="!blockConfig.contentOnly">
+<!--<div class="container-fluid" ng-if="!blockConfig.contentOnly">
 	<div class="row">
 		<div class="col-xs-12 ">
 			<div ng-controller="BreadcrumbController as breadcrumbCtrl">
@@ -135,16 +135,16 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div>-->
 
 <div class="container">
-  <header class="container-fluid" style="margin-bottom: 48px" ng-if="!blockConfig.contentOnly">
+  <header class="container-fluid" style="margin-top:100px; margin-bottom: 48px" ng-if="!blockConfig.contentOnly">
 	  <div class="text-article container">
-		  <p class='capital txt-red' style="text-shadow: none" ng-if="fieldEntity['date']">{{contentDetailCtrl.content.fields.date*1000 | date:'longDate'}} - {{fieldEntity['lieu']}}</p>
+		  <p class='capital txt-white' style="text-shadow: none" ng-if="fieldEntity['date']">{{contentDetailCtrl.content.fields.date*1000 | date:'longDate'}} - {{fieldEntity['lieu']}}</p>
 		  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('date')}}" ng-if="fieldEditMode"></rubedo-field>
 		  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('lieu')}}" ng-if="fieldEditMode"></rubedo-field>
 		  <div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
-			  <h1 class="text-left" ng-if="!fieldEditMode" style="text-shadow: none">{{fieldEntity['text']}}</h1>
+			  <h1 class="text-center" ng-if="!fieldEditMode" style="text-shadow: none">{{fieldEntity['text']}}</h1>
   
 			  <rubedo-field ng-if="fieldEditMode" field = "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEditMode"></rubedo-field>
 		  </div>
@@ -158,12 +158,12 @@
 												  <div class=" col-xs-12 ">
   
 																  <div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}"  data-summary="{{contentDetailCtrl.content.fields.summary}}" class="addthis_toolbox socials pull-right" ng-if="!blockConfig.contentOnly">
-																				  <!--<a class="addthis_button_facebook_like txt-red" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
-																				  <a class="addthis_button_facebook txt-red"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
-																				  <a class="addthis_button_twitter txt-red"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
-																				  <a class="addthis_button_email txt-red"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
-																				  <a class="addthis_button_expanded txt-red"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
-																				  <span class="txt-red capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
+																				  <!--<a class="addthis_button_facebook_like txt-white" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
+																				  <a class="addthis_button_facebook txt-white"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
+																				  <a class="addthis_button_twitter txt-white"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
+																				  <a class="addthis_button_email txt-white"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
+																				  <a class="addthis_button_expanded txt-white"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
+																				  <span class="txt-white capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
 																  </div>
 																  {{contentDetailCtrl.tooltips()}}
 																  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('description')}}" ></rubedo-field>
