--- a/theme/foyers/templates/blocks/contentDetail/album.html
+++ b/theme/foyers/templates/blocks/contentDetail/album.html
@@ -123,6 +123,44 @@
 .masonry-brick:hover .img-description{opacity:1}
 .masonry-brick:not(.loaded) .img-description{display: none}
 
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+
+
 </style>
 <!--<div class="container-fluid" ng-if="!blockConfig.contentOnly">
 	<div class="row">
@@ -140,7 +178,7 @@
 <div class="container">
   <header class="container-fluid" style="margin-top:100px; margin-bottom: 48px" ng-if="!blockConfig.contentOnly">
 	  <div class="text-article container">
-		  <p class='capital txt-white' style="text-shadow: none" ng-if="fieldEntity['date']">{{contentDetailCtrl.content.fields.date*1000 | date:'longDate'}} - {{fieldEntity['lieu']}}</p>
+		  <p class='capital txt-white' style="text-shadow: none; font-style:italic;" ng-if="fieldEntity['date']">{{contentDetailCtrl.content.fields.date*1000 | date:'longDate'}} - {{fieldEntity['lieu']}}</p>
 		  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('date')}}" ng-if="fieldEditMode"></rubedo-field>
 		  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('lieu')}}" ng-if="fieldEditMode"></rubedo-field>
 		  <div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
@@ -154,23 +192,20 @@
   <div class="row">
 				  <div class="col-xs-12">
 								  <div class="text-article">
-  
-												  <div class=" col-xs-12 ">
-  
 																  <div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}"  data-summary="{{contentDetailCtrl.content.fields.summary}}" class="addthis_toolbox socials pull-right" ng-if="!blockConfig.contentOnly">
 																				  <!--<a class="addthis_button_facebook_like txt-white" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
-																				  <a class="addthis_button_facebook txt-white"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
-																				  <a class="addthis_button_twitter txt-white"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
-																				  <a class="addthis_button_email txt-white"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
-																				  <a class="addthis_button_expanded txt-white"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
+																				  <a class="addthis_button_facebook txt-white"><img class="hidden"><i class="fa fa-facebook-official" ></i> </a>
+																				  <a class="addthis_button_twitter txt-white"><img  class="hidden"><i class="fa fa-twitter-square" ></i> </a>
+																				  <a class="addthis_button_email txt-white"><img class="hidden"><i class="fa fa-share-square" ></i></a>
+																				  <a class="addthis_button_expanded txt-white"><img class="hidden"><i class="fa fa-plus-square" ></i></a><br/>
 																				  <span class="txt-white capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
 																  </div>
 																  {{contentDetailCtrl.tooltips()}}
-																  <rubedo-field field = "{{contentDetailCtrl.getFieldByName('description')}}" ></rubedo-field>
-  
-												  </div>
-  
 								  </div>
+				  </div>
+				  <div class="col-xs-12">
+						<rubedo-field field = "{{contentDetailCtrl.getFieldByName('description')}}" ></rubedo-field>
+						<br/><br/><br/>
 				  </div>
   </div>
   
