--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -514,6 +514,83 @@ header.bg-image{
 }
 
 
+/*BLOC DE REDIRECTION PAGE ACCUEIL*/
+.bloc-icone2{
+    margin-right: 12%; 
+    margin-left: 12%;
+}
+.bloc-icone2>div{padding:30px;}
+.bloc-icone2>div p{
+		text-align: center;
+}
+.bloc-icone2>div a{
+		text-align: center;
+}
+.bloc-icone2>div div.line-center {
+		border-color: #dfdfdf;
+		clear: both;
+		margin: 30px auto;
+		width: 50px;
+		border-top-style: solid;
+		border-top-width: 3px;
+}
+.contain {
+  position: relative;
+  width:100px;
+  height:100px;
+  margin-bottom:20px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contain> p:first-of-type{
+	font-family: FontAwesome;
+    font-size: 50px;
+    height: 100px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;
+    width: 100px;
+    margin: 24px auto;
+	border: 3px solid white;
+	color:white;
+	display:block;
+}
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: white;
+  overflow: hidden;
+  width: 100px;
+  height:0;
+  transition: .5s ease;
+}
+.overlay p a{
+    color:#41a0c7 !important;
+    font-weight:bold !important;
+}
+.contain:hover .overlay {
+  bottom: 0;
+  height: 100px;
+}
+.text {
+  font-size: 17px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+
+.case{
+    width:100% !important;
+    height:100% !important;
+    display:block !important;
+}
+
 /*FOOTER*/
 .footer{
 		margin-top:48px;
