--- a/theme/foyers/templates/blocks/carrousel_fullWidth.html
+++ b/theme/foyers/templates/blocks/carrousel_fullWidth.html
@@ -61,7 +61,7 @@
     background-size: cover;
     -o-background-size: cover;
 }
-.dotted2:after {
+.dotted:after {
     background: url('/theme/foyers/img/pattern_dot.png') repeat left top rgba(0,0,0,0.5);
     content: '';
     display: block;
