--- a/theme/cte/templates/blocks/imageBatchUpload.html
+++ b/theme/cte/templates/blocks/imageBatchUpload.html
@@ -10,7 +10,7 @@
 }
 </style>
 <div ng-controller="ImageBatchUploadController as imgCtrl" ng-if="rubedo.current.user" class="texte">
-        <form class="row">
+        <form class="row"><br/><br>
                 <div class="form-group">
                         <label class="col-sm-12">Renommer les photos ?</label>
                         <label class="control-label txt-red capital">Titre</label>
