--- a/theme/foyers/templates/blocks/imageBatchUpload.html
+++ b/theme/foyers/templates/blocks/imageBatchUpload.html
@@ -13,7 +13,7 @@
 .texte{margin-top:100px;}
 </style>
 <div ng-controller="ImageBatchUploadController as imgCtrl" ng-if="rubedo.current.user" class="texte">
-        <form class="row">
+        <form class="row"><br/><br/>
                 <div class="form-group">
                         <label class="col-sm-12">Renommer les photos ?</label>
                         <label class="control-label txt-red capital">Titre</label>
