--- a/theme/foyers/templates/blocks/liste.html
+++ b/theme/foyers/templates/blocks/liste.html
@@ -59,7 +59,7 @@
                     
                         <div class="overlay">
                             <a class="case" href="https://www.foyersetudiants.org/fr/aix-sainteclaire/acces" rubedo-page-link="591b5394396588b335346ed2">
-                            <p class="text">CONTACT</p>
+                            <p class="text">+ D'INFOS ?</p>
                             </a>
                         </div>
                     
