--- a/theme/foyers/templates/blocks/carrousel_fullWidth.html
+++ b/theme/foyers/templates/blocks/carrousel_fullWidth.html
@@ -120,9 +120,9 @@
           <div class="homepage_txt" >
               <h1>{{rubedo.current.page.text | firstword : 0}}<br>{{rubedo.current.page.text | firstword : 1}}</h1>
           </div>
-          <div class="link visible-xs-block" ng-if="carouselCtrl.detailPageId">
+          <!--<div class="link visible-xs-block" ng-if="carouselCtrl.detailPageId">
            <a rubedo-page-link="{{carouselCtrl.detailPageId}}">Présentation</a>
-          </div>
+          </div>-->
       </div>
   </div>
        <!-- Controls -->
