--- a/theme/cte/templates/blocks/simpleContactEDM.html
+++ b/theme/cte/templates/blocks/simpleContactEDM.html
@@ -58,7 +58,7 @@
         </div>
         <div class="row">
           <div class="col-sm-5">
-            <label for="{{'startDate'+block.id}}" class="label_style left" style="width:100%">{{rubedo.translate("Arrivee")}}*</label>
+            <label for="{{'startDate'+block.id}}" class="left" style="width:100%">{{rubedo.translate("Arrivee")}}*</label>
             <div class="dropdown">
               <a showtab class="dropdown-toggle" id="{{'startDate'+block.id}}" role="button" data-toggle="dropdown" data-target="#" href="#">
                 <div class="input-group">
@@ -87,7 +87,7 @@
           </div>
           <div class="col-sm-2"></div>
           <div class="col-sm-5">
-            <label for="{{'endDate'+block.id}}" class="label_style left" style="width:100%">{{rubedo.translate("Depart")}}*</label>
+            <label for="{{'endDate'+block.id}}" class="left" style="width:100%">{{rubedo.translate("Depart")}}*</label>
             <div class="dropdown">
               <a showtab class="dropdown-toggle" id="{{'endDate'+block.id}}" role="button" data-toggle="dropdown" data-target="#" href="#">
                 <div class="input-group">
@@ -119,7 +119,7 @@
     
     <br/><br/>
         
-        <div class="row">
+        <!--<div class="row">
             <div class="col-sm-4">
                 <label>Type d'hébergement*</label>
             </div>
@@ -135,7 +135,7 @@
                     <label for="pension_complete">Pension complète</label>
                 </div>
             </div>
-        </div>
+        </div>-->
         
         
         
@@ -161,7 +161,7 @@
                 <label class="text-center" style="font-style:italic;">Merci de préciser le type de chambre que vous désirez (individuelle, double ou familiale)</label>
                 <textarea class="form-control" ng-model="contactCtrl.contactData.message" rows="2" required></textarea>
             </div>
-                <input type="hidden" ng-model="contactCtrl.contactData.subject" class="form-control" ng-init="contactCtrl.contactData.subject='Demande de réservation' ">
+                
 
         </div>
         
