--- a/theme/cte/templates/mails/reservationEDM.html
+++ b/theme/cte/templates/mails/reservationEDM.html
@@ -25,7 +25,7 @@
       Date prévue d'arrivée : { startDate }<br/> 
       Nombre de nuits : { nbOfNights }<br/>
       Date prévue de départ : { endDate }<br/><br/>
-      Type d'hébergement : { hebergement }<br/>
+      <!--Type d'hébergement : { hebergement }<br/>-->
     </td>
     <td>
       Groupe d'adultes (nombre envisagé) : { nombreAdultes }<br/> 
@@ -36,7 +36,7 @@
   </table><br/>
 
   <p><b>Commentaires</b><br/>
-  { remarks }</p>
+  { message }</p>
   
   
   </div>
